feat: upgrade LangChain4j from 0.31.0 to 1.12.2
Breaking changes:
- ChatLanguageModel → ChatModel
- .chatLanguageModel() → .chatModel()
- model.generate() → model.chat()
- Response<T> → ChatResponse, content().text() → aiMessage().text()
- PromptTemplate API now available for template rendering

Other changes:
- Removed langchain4j-milvus and langchain4j-elasticsearch dependencies
- Updated CLAUDE.md and README.md with new API patterns
- Added documentation sync intent for future changes
- Added settings-test.xml for Maven Central access

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>